--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #链接数据库，并配置编码格式
-spring.datasource.url=jdbc:mysql://localhost:3306/WxDataBase?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/ruangong?useUnicode=true&characterEncoding=UTF-8
 #数据库用户名和密码
 spring.datasource.username=root
-spring.datasource.password=mdty6389
+spring.datasource.password=123456
 #使用Driver驱动
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
